test/resources/parser/failing/ExtTypeError3.scala
object TypeError {
  def f(a: => Int): Int = {
    a(0)
  }
  0
}
